@@ -31,6 +31,8 @@ core 2.2.1 - not released yet
 	* Added: TodoyuMailReceiver type 'simple'
 	* Added: TodoyuFormElement_Select->getSelectedValue() which returns the first selected value which is ok if multiple flag is not set
 	* Added: TodoyuViewHelper for general view helpers from core
+	* Added: Todoyu::getSystemLocale() to access system fallback locale directly
+	* Added: TodoyuViewHelper::getLocaleOptions()
 	* Changed: Removed $parseConstants from TodoyuArray::intExplode(). Was not used and supported. Added $limi parameter as for trimExplode()
 	* Changed: Use js version instead of php the check for the first input in form
 	* Changed: Update form XSD validation to match know field types only
